# SimplestRhd

./: .gitignore  README.md  cond_test.py  config.py  euler.py  implicit_thermal_conduction.py  main.py  reconstruct.py
experiments/: README.md
experiments/cherry_bifrost_self_similar/: run.py  setup.py
experiments/cherry_bifrost_self_similar_htc/: run.py  setup.py
experiments/fi_condensation/: run.py
experiments/lte_condensation/: run.py
experiments/lte_condensation_cond/: run.py
experiments/lte_sod_shock/: run.py  setup.py
experiments/non_lte_condensation/: h_collisional_rates.py  h_model.py  run.py
experiments/non_lte_condensation_hse/: initial_conductive_profile.py  run.py
experiments/rempel_conduction/: run.py  setup.py
experiments/sod_shock/: run.py  setup.py
fvm_formalsolver/: CMakeLists.txt  lw_test.py  pragmatic_fvm_fs.cpp
simplestrhd/: __init__.py  conduction.py  config_template.py  custom_eos.py  eos.py  hyperbolic_conduction.py  indices.py  io.py  lte_eos.py  lw_interface.py  reconstruction.py  riemann_flux.py  simulation.py  simulator.py  sponge_layer.py  thin_loss.py  tracer_eos.py  tracers.py  utils.py
